<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/horror_bg">

    <com.halahasneen.theguest.ui.game.GameCanvasView
        android:id="@+id/gameCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.halahasneen.theguest.ui.components.JoystickView
        android:id="@+id/joystick"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/movement_joystick" />

    <com.halahasneen.theguest.ui.components.InteractionButtonView
        android:id="@+id/interactionButton"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/interact" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:layout_gravity="top|right"
        android:layout_marginTop="14dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/menu_button"
        android:contentDescription="@string/pause_game"
        android:text="Ⅱ"
        android:textColor="@color/ui_text"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/pauseOverlay"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/panel_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/pause"
            android:textColor="@color/ui_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resumeButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/menu_button"
            android:text="@string/resume"
            android:textColor="@color/ui_text" />

        <Button
            android:id="@+id/pauseSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/menu_button"
            android:text="@string/settings"
            android:textColor="@color/ui_text" />

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_button"
            android:text="@string/main_menu"
            android:textColor="@color/ui_text" />
    </LinearLayout>
</FrameLayout>
